--- a/front/src/app/components/private/admin/components/manage-users/components/manage-admin/manage-admin.component.html
+++ b/front/src/app/components/private/admin/components/manage-users/components/manage-admin/manage-admin.component.html
@@ -46,30 +46,36 @@
     </ng-template>
     <ng-template pTemplate="header">
       <tr>
-        <th style="width: 10%">Usuario</th>
-        <th style="width: 20%">Acciones</th>
+        <th style="width: 10%">Acciones</th>
+        <th style="width: 20%">Usuario</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-user>
       <tr>
         <td>
-          {{ user.usuario }}
-        </td>
-        <td>
           <button
-            class="btn btn-warning btn-sm me-2"
+            class="btn btn-md me-2"
             (click)="changeState(user.id)"
+            [ngClass]="user.activo ? 'btn-danger' : 'btn-success'"
           >
-            {{ user.activo ? "Deshabilitar" : "Habilitar" }}
+            <i class="bi bi-person-fill-slash"></i>
           </button>
           <button
-            class="btn btn-primary btn-sm"
+            class="btn btn-primary btn-md me-2"
             (click)="editUser(user.id)"
             data-bs-toggle="modal"
             data-bs-target="#userModal"
           >
-            Editar
+            <i class="bi bi-person-fill-gear"></i>
           </button>
+          <button class="btn btn-md btn-warning" (click)="openResetPasswordModal(user.id)"
+            data-bs-toggle="modal"
+            data-bs-target="#resetPasswordModal">
+            <i class="bi bi-key-fill text-white"></i>
+          </button>
+        </td>
+        <td>
+          {{ user.usuario }}
         </td>
       </tr>
     </ng-template>
@@ -157,6 +163,26 @@
           </button>
         </div>
       </form>
+    </div>
+  </div>
+</div>
+<!-- End Modal -->
+
+<!-- Modal de Confirmación de Restablecimiento -->
+<div class="modal fade" id="resetPasswordModal" tabindex="-1" aria-labelledby="resetPasswordLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="resetPasswordLabel">Restablecer Contraseña</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ¿Estás seguro que deseas restablecer la contraseña para este usuario?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-danger" (click)="confirmResetPassword()" data-bs-dismiss="modal">Restablecer</button>
+      </div>
     </div>
   </div>
 </div>
