Fix user create functionality

--- a/front/src/app/components/private/admin/components/manage-users/components/manage-executive/manage-executive.component.html
+++ b/front/src/app/components/private/admin/components/manage-users/components/manage-executive/manage-executive.component.html
@@ -50,7 +50,7 @@
     </ng-template>
     <ng-template pTemplate="header">
       <tr>
-        <th style="width: 20%">Acciones</th>
+        <th style="width: 12%">Acciones</th>
         <th style="width: 10%">No. Documento</th>
         <th style="width: 15%">Primer Apellido</th>
         <th style="width: 15%">Segundo Apellido</th>
@@ -143,7 +143,7 @@
                 formControlName="idTipoDocumento"
               >
                 <option value="" disabled selected>
-                  Selecciona...
+                  Seleccione...
                 </option>
                 <option
                   *ngFor="let documentType of documentTypes"
