--- a/front/src/app/components/private/welcome/welcome.component.html
+++ b/front/src/app/components/private/welcome/welcome.component.html
@@ -58,7 +58,7 @@
                 </h4>
                 <div class="card-body ">
                     <h5 class="card-title">Cambiar contraseña</h5>
-                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/settings">Ir a los ajustes de la cuenta</a>
+                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/settings">Ir a los ajustes de la cuenta</a>
                 </div>
             </div>
         </div>
