Change financial info inputs

--- a/front/src/app/components/private/user/request/request-credit/info-request-credit/info-request-credit.component.html
+++ b/front/src/app/components/private/user/request/request-credit/info-request-credit/info-request-credit.component.html
@@ -335,7 +335,7 @@
             </div>
             <div class="col-md-6">
               <label for="telefono" class="form-label"
-                >Número de teléfono</label
+                >Número de teléfono (Opcional)</label
               >
               <input
                 formControlName="telefono"
@@ -357,7 +357,7 @@
             </div>
             <div class="col-md-6">
               <label for="telefonoOficina" class="form-label"
-                >Número de teléfono de oficina</label
+                >Número de teléfono de oficina  (Opcional)</label
               >
               <input
                 formControlName="telefonoOficina"
