--- a/front/src/app/components/private/components/sidebar/sidebar.component.html
+++ b/front/src/app/components/private/components/sidebar/sidebar.component.html
@@ -316,7 +316,7 @@
     </li>
   </ul>
   <div class="mt-auto">
-    <button class="btn btn-danger w-100 mt-3" data-bs-toggle="modal" data-bs-target="#logoutModal">Cerrar
+    <button class="btn btn-danger w-100 mt-3" (click)="openLogoutModal()">Cerrar
       Sesión</button>
   </div>
 </div>
@@ -326,18 +326,18 @@
 </main>
 
 <!-- Modal -->
-<div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
+<div class="modal" *ngIf="showLogoutModal" tabindex="-1" >
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="logoutModalLabel">Confirmar Cierre de Sesión</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close"(click)="closeLogoutModal()" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <p>¿Está seguro de que desea cerrar sesión?</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-secondary" (click)="closeLogoutModal()">Cancelar</button>
         <button type="button" class="btn btn-danger" (click)="confirmLogout()">Cerrar Sesión</button>
       </div>
     </div>
