--- a/front/src/app/components/private/components/sidebar/sidebar.component.html
+++ b/front/src/app/components/private/components/sidebar/sidebar.component.html
@@ -337,8 +337,8 @@
         <p>¿Está seguro de que desea cerrar sesión?</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" (click)="closeModal()">Cancelar</button>
-        <button type="button" class="btn btn-danger" (click)="handleLogout()" data-bs-dismiss="modal">Cerrar Sesión</button>
+        <button type="button" class="btn btn-secondary"  data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-danger" (click)="confirmLogout()" data-bs-dismiss="modal">Cerrar Sesión</button>
       </div>      
     </div>
   </div>
