--- a/front/src/app/components/public/home/components/credit-service-home/credit-service-home.component.html
+++ b/front/src/app/components/public/home/components/credit-service-home/credit-service-home.component.html
@@ -4,7 +4,7 @@
     <div class="col">
       <a routerLink="/services/credits">
         <div class="card h-100 shadow text-center">
-          <img src="../../../../../assets/ahorroExtraordinario.jpg" class="card-img-top" alt="...">
+          <img src="../../../../../assets/femseapto/creditoVivienda2.webp" class="card-img-top img-custom" alt="...">
           <a class="card-action">
             <i class="bi bi-house-heart-fill"></i>
           </a>
@@ -18,7 +18,7 @@
     <div class="col">
       <a routerLink="/services/credits">
         <div class="card h-100 shadow text-center">
-          <img src="../../../../../assets/ahorroExtraordinario.jpg" class="card-img-top" alt="...">
+          <img src="../../../../../assets/femseapto/creditoVehiculo2.webp" class="card-img-top img-custom" alt="...">
           <a class="card-action">
             <i class="bi bi-house-heart-fill"></i>
           </a>
@@ -32,7 +32,7 @@
     <div class="col">
       <a routerLink="/services/credits">
         <div class="card h-100 shadow text-center">
-          <img src="../../../../../assets/ahorroExtraordinario.jpg" class="card-img-top" alt="...">
+          <img src="../../../../../assets/femseapto/creditoLibreInversion.webp" class="card-img-top img-custom" alt="...">
           <a class="card-action">
             <i class="bi bi-house-heart-fill"></i>
           </a>
@@ -46,7 +46,7 @@
     <div class="col">
       <a routerLink="/services/credits">
         <div class="card h-100 shadow text-center">
-          <img src="../../../../../assets/ahorroExtraordinario.jpg" class="card-img-top" alt="...">
+          <img src="../../../../../assets/femseapto/creditoEducacion.webp" class="card-img-top img-custom" alt="...">
           <a class="card-action">
             <i class="bi bi-house-heart-fill"></i>
           </a>
