Update credit and saving services

--- a/front/src/app/components/public/credit-service/credit-service.component.html
+++ b/front/src/app/components/public/credit-service/credit-service.component.html
@@ -56,7 +56,7 @@
         <div class="col-12 col-lg-8 align-self-start mt-3">
             <div #card class="card shadow tipos-ahorro">
                 <div *ngIf="selectedCreditLine === 'CREDITO COMPRA O MEJORAS DE VIVIENDA'" class="credit-line">
-                    <img src="../../../assets/confianza.jpg" alt="Credito Vivienda" class="img-fluid">
+                    <img src="../../../assets/femseapto/creditoVivienda2.webp" alt="Credito Vivienda" class="img-fluid">
                     <h3>CREDITO COMPRA O MEJORAS DE VIVIENDA</h3>
                     <h5>A través de este crédito, el fondo de empleados pretende ayudar a los asociados que tengan la
                         oportunidad de adquirir vivienda propia aportando al pago de su cuota inicial o para mejoras de su
@@ -122,7 +122,7 @@
                 </div>
                 
                 <div *ngIf="selectedCreditLine === 'CREDITO VEHICULO'" class="credit-line">
-                    <img src="../../../assets/honestidad.jpg" alt="Credito Vehiculo" class="img-fluid">
+                    <img src="../../../assets/femseapto/creditoVehiculo2.webp" alt="Credito Vehiculo" class="img-fluid">
                     <h3>CREDITO VEHICULO</h3>
                     <h5>Esta línea de crédito está destinada para la compra de vehículos automotores propios.</h5>
                     <ul class="list-group list-group-flush card-text text-start">
@@ -195,7 +195,7 @@
                     </div>
                 </div>
                 <div *ngIf="selectedCreditLine === 'CREDITO LIBRE INVERSION'" class="credit-line">
-                    <img src="../../../assets/confianza.jpg" alt="Credito Libre Inversion" class="img-fluid">
+                    <img src="../../../assets/femseapto/creditoLibreInversion.webp" alt="Credito Libre Inversion" class="img-fluid">
                     <h3>CREDITO LIBRE INVERSION</h3>
                     <h5>Se considera como crédito de libre inversión aquel que un asociado solicita para cubrir sus necesidades sin tener que justificar su destino.</h5>
                     <ul class="list-group list-group-flush card-text text-start">
@@ -225,7 +225,7 @@
                     </div>
                 </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO CONSUMO'" class="credit-line">
-                                <img src="../../../assets/honestidad.jpg" alt="Credito Consumo" class="img-fluid">
+                                <img src="../../../assets/femseapto/creditoConsumo.webp" alt="Credito Consumo" class="img-fluid">
                                 <h3>CREDITO CONSUMO</h3>
                                 <h5>Se considera crédito de consumo, el solicitado por los asociados para retirar productos de otras entidades; y en los cuales el Fondo previamente ha realizado un contrato o Pacto de Comercio.</h5>
                                 <ul class="list-group list-group-flush card-text text-start">
@@ -270,7 +270,7 @@
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO EXTRAORDINARIO'" class="credit-line">
-                                <img src="../../../assets/honestidad.jpg" alt="CREDITO EXTRAORDINARIO" class="img-fluid">
+                                <img src="../../../assets/femseapto/creditoExtraordinario.webp" alt="CREDITO EXTRAORDINARIO" class="img-fluid">
                                 <h3>CREDITO EXTRAORDINARIO</h3>
                                 <h5>El crédito extraordinario, será destinado a la adquisición de bienes y/o servicios para satisfacer las necesidades del asociado mediante actividades específicas programadas por el Fondo de Empleados. También se podrá destinar como crédito rotativo.</h5>
                                 <ul class="list-group list-group-flush card-text text-start">
@@ -296,7 +296,7 @@
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO CREDIPRIMA'" class="credit-line">
-                                <img src="../../../assets/honestidad.jpg" alt="CREDITO CREDIPRIMA" class="img-fluid">
+                                <img src="../../../assets/femseapto/crediPrima.webp" alt="CREDITO CREDIPRIMA" class="img-fluid">
                                 <h3>CREDITO CREDIPRIMA</h3>
                                 <h5>Entiéndase como el crédito otorgado para ser cubierto con la prima de servicios o prima de navidad. Esta línea de crédito no afecta cupo.</h5>
                                 <ul class="list-group list-group-flush card-text text-start">
@@ -341,7 +341,7 @@
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO DE CALAMIDAD'" class="credit-line">
-                                <img src="../../../assets/honestidad.jpg" alt="CREDITO DE CALAMIDAD" class="img-fluid">
+                                <img src="../../../assets/femseapto/creditoCalamidad.webp" alt="CREDITO DE CALAMIDAD" class="img-fluid">
                                 <h3>CREDITO DE CALAMIDAD</h3>
                                 <h5>Entiéndase como crédito emergente o de calamidad doméstica, el que se otorga al asociado que, por un hecho imprevisible, aleatorio que no se puede evitar, causa un perjuicio temporal a él y/o su familia.</h5>
                                 <ul class="list-group list-group-flush card-text text-start">
@@ -390,7 +390,7 @@
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO VACACIONAL'" class="credit-line">
-                                <img src="../../../assets/honestidad.jpg" alt="CREDITO VACACIONAL" class="img-fluid">
+                                <img src="../../../assets/femseapto/creditoVacacional.webp" alt="CREDITO VACACIONAL" class="img-fluid">
                                 <h3>CREDITO VACACIONAL</h3>
                                 <h5>Los asociados podrán adquirir un préstamo para sus vacaciones, este crédito se podrá solicitar con unos días de anticipación a la salida de vacaciones o durante dicho periodo.</h5>
                                 <ul class="list-group list-group-flush card-text text-start">
@@ -423,7 +423,7 @@
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITOS PARA EDUCACION'" class="credit-line">
-                                <img src="../../../assets/honestidad.jpg" alt="CREDITOS PARA EDUCACION" class="img-fluid">
+                                <img src="../../../assets/femseapto/creditoEducacion.webp" alt="CREDITOS PARA EDUCACION" class="img-fluid">
                                 <h3>CREDITOS PARA EDUCACION</h3>
                                 <h5>Este crédito se otorgará a los asociados del fondo que requieran adelantar estudios superiores con el ánimo de capacitarse en programas que aporten a su desarrollo laboral y personal.</h5>
                                 <ul class="list-group list-group-flush card-text text-start">
@@ -468,7 +468,7 @@
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO MICROEMPRESA'" class="credit-line">
-                                <img src="../../../assets/honestidad.jpg" alt="CREDITO MICROEMPRESA" class="img-fluid">
+                                <img src="../../../assets/femseapto/creditoMicroempresa.webp" alt="CREDITO MICROEMPRESA" class="img-fluid">
                                 <h3>CREDITO MICROEMPRESA</h3>
                                 <h5>Los asociados podrán adquirir un préstamo para la creación de microempresa o para invertir en ella, contribuyendo así al crecimiento económico tanto a nivel personal como comunitario.</h5>
                                 <ul class="list-group list-group-flush card-text text-start">
@@ -505,7 +505,7 @@
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO CREDIAGIL'" class="credit-line">
-                                <img src="../../../assets/honestidad.jpg" alt="CREDITO CREDIAGIL" class="img-fluid">
+                                <img src="../../../assets/femseapto/ahorroExtraordinario.webp" alt="CREDITO CREDIAGIL" class="img-fluid">
                                 <h3>CREDITO CREDIAGIL</h3>
                                 <h5>El crédito Ágil, será destinado al pago de obligaciones específicas del asociado con la empresa patronal, específicamente para saldos de cartera.</h5>
                                 <ul class="list-group list-group-flush card-text text-start">
@@ -538,7 +538,7 @@
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO ORDINARIO'" class="credit-line">
-                                <img src="../../../assets/honestidad.jpg" alt="CREDITO ORDINARIO" class="img-fluid">
+                                <img src="../../../assets/femseapto/ahorroVivienda.webp" alt="CREDITO ORDINARIO" class="img-fluid">
                                 <h3>CREDITO ORDINARIO</h3>
                                 <h5>El crédito Ordinario será destinado al pago de obligaciones del asociado, específicamente para pago de obligaciones que el asociado tenga.</h5>
                                 <ul class="list-group list-group-flush card-text text-start">
@@ -587,7 +587,7 @@
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO CREDIFACIL'" class="credit-line">
-                                <img src="../../../assets/honestidad.jpg" alt="CREDITO CREDIFACIL" class="img-fluid">
+                                <img src="../../../assets/femseapto/ahorroNavideño.webp" alt="CREDITO CREDIFACIL" class="img-fluid">
                                 <h3>CREDITO CREDIFACIL</h3>
                                 <h5>El crédito CrediFacil, será destinado para los nuevos asociados que se vinculen a través del programa SEAPTO Soluciones al instante, el cual tendrá las siguientes condiciones:</h5>
                                 <ul class="list-group list-group-flush card-text text-start">
@@ -636,7 +636,7 @@
                                 </div>
                             </div>
                             <div *ngIf="selectedCreditLine === 'CREDITO CREDICUMPLEAÑOS'" class="credit-line">
-                                <img src="../../../assets/honestidad.jpg" alt="CREDITO CREDICUMPLEAÑOS" class="img-fluid">
+                                <img src="../../../assets/femseapto/cumpleaños.webp" alt="CREDITO CREDICUMPLEAÑOS" class="img-fluid">
                                 <h3>CREDITO CREDICUMPLEAÑOS</h3>
                                 <h5>Crédito que el asociado podrá solicitar en el mes de su cumpleaños, para libre destinación.</h5>
                                 <ul class="list-group list-group-flush card-text text-start">
