--- a/front/src/app/components/public/saving-service/saving-service.component.html
+++ b/front/src/app/components/public/saving-service/saving-service.component.html
@@ -27,7 +27,7 @@
         <div class="col-12 col-lg-8 align-self-center mt-3">
             <div #card class="card shadow tipos-ahorro">
                 <div *ngIf="selectedSavingLine === 'AHORRO VIVIENDA'" class="saving-line">
-                    <img src="../../../assets/confianza.jpg" alt="Ahorro Vivienda" class="img-fluid">
+                    <img src="../../../assets/femseapto/ahorroVivienda.webp" alt="Ahorro Vivienda" class="img-fluid">
                     <h3>AHORRO VIVIENDA</h3>
                     <h5>Esta línea de ahorro está especialmente destinada para aquellos asociados que desean ahorrar para la
                         compra de vivienda o para realizar mejoras en su hogar.</h5>
@@ -37,7 +37,7 @@
                     </div>
                 </div>
                 <div *ngIf="selectedSavingLine === 'AHORRO NAVIDEÑO'" class="saving-line">
-                    <img src="../../../assets/honestidad.jpg" alt="Ahorro Navideño" class="img-fluid">
+                    <img src="../../../assets/femseapto/ahorroNavideño.webp" alt="Ahorro Navideño" class="img-fluid">
                     <h3>AHORRO NAVIDEÑO</h3>
                     <h5>El Ahorro Navideño está pensado para ayudar a los asociados a enfrentar los gastos típicos de la
                         temporada decembrina.</h5>
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div *ngIf="selectedSavingLine === 'AHORRO VACACIONAL'" class="saving-line">
-                    <img src="../../../assets/confianza.jpg" alt="Ahorro Vacacional" class="img-fluid">
+                    <img src="../../../assets/femseapto/ahorroVacacional.webp" alt="Ahorro Vacacional" class="img-fluid">
                     <h3>AHORRO VACACIONAL</h3>
                     <h5>Esta línea de ahorro te permite reservar fondos para financiar tus viajes y actividades de ocio
                         durante las vacaciones.</h5>
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div *ngIf="selectedSavingLine === 'AHORRO EXTRAORDINARIO'" class="saving-line">
-                    <img src="../../../assets/honestidad.jpg" alt="Ahorro Extraordinario" class="img-fluid">
+                    <img src="../../../assets/femseapto/ahorroExtraordinario.webp" alt="Ahorro Extraordinario" class="img-fluid">
                     <h3>AHORRO EXTRAORDINARIO</h3>
                     <h5>Con esta línea de ahorro, los asociados pueden estar preparados para enfrentar cualquier emergencia
                         financiera que pueda surgir, como reparaciones en el hogar, gastos médicos o pérdida de empleo.</h5>
