--- a/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.html
+++ b/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.html
@@ -1,5 +1,6 @@
 <div class="container mt-5">
   <h1>Solicitudes de Crédito</h1>
+  <app-credit-report/>
   <div class="card">
     <p-table
       #dt2
