Add notifications in generate credits report

--- a/front/src/app/components/private/admin/components/credit-report/credit-report.component.html
+++ b/front/src/app/components/private/admin/components/credit-report/credit-report.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <div class="date-picker-container">
     <label for="startDate">Fecha de inicio:</label>
     <input type="date" id="startDate" [(ngModel)]="startDate">
