--- a/front/src/app/components/private/admin/components/manage-users/components/manage-admin/manage-admin.component.html
+++ b/front/src/app/components/private/admin/components/manage-users/components/manage-admin/manage-admin.component.html
@@ -31,17 +31,17 @@
         >
           Crear Administrador
         </button>
-        <!--<p-iconField iconPosition="left" class="ml-auto">
+        <p-iconField iconPosition="left" class="ml-auto">
           <p-inputIcon>
             <i class="pi pi-search"></i>
           </p-inputIcon>
           <input
             pInputText
             type="text"
-            (input)="onFilterGlobal($event)"
+            [formControl]="searchControl"
             placeholder="Buscar palabra clave"
           />
-        </p-iconField>-->
+        </p-iconField>
       </div>
     </ng-template>
     <ng-template pTemplate="header">
